[package]
name = "retl"
version = "0.1.0"
authors = ["Spencer Huston <sjh91910@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }
regex = "1"
strum = "0.24"
strum_macros = "0.24"
either = "1.8.1"
substring = "1.4.5"